fixed height of category boxes so that they look well on mobile

--- a/src/app/category-filter/category-filter.component.css
+++ b/src/app/category-filter/category-filter.component.css
@@ -10,21 +10,16 @@
 
 .category-div {
   border-bottom: 3px solid #ddd;
-  /*border-left: 3px solid #ddd;
-  border-right: 3px solid #ddd;*/
-  border-top: 3px solid #ddd;
+  border-left: 3px solid #ddd;
   margin-left: 0px;
   margin-right: 0px;
-  color: #2a2a2a;
 }
 
-.border-right {
-  border-right: 2px solid #ddd;
+.category-div + .category-div
+{
+    border-left: none;
 }
 
-.border-top {
-  border-top: 2px solid #ddd;
-}
 
 .active {
   color: #ffffff;
@@ -34,13 +29,21 @@
 
 @media only screen and (max-width : 480px) {
 
-  .category-icon{
-    height: 50px;
+  .category-name {
+    font-size: 10px;
   }
 
-  .category-icon:first-of-type, .category-icon:last-of-type{
-    height: 36px;
+  .category-icon{
+    height: 60px;
   }
+
+  .category-div {
+    height: 95px;
+  }
+
+  /*.category-icon:first-of-type, .category-icon:last-of-type{
+    height: 36px;
+  }*/
 
   /*.category-icon-1{
     height: 36px;
@@ -58,7 +61,5 @@
     height: 36px;
   }*/
 
-  .category-name {
-    font-size: 10px;
-  }
+
 }
