--- a/src/app/report-definer/sub_components/report-type-selector/report-type-selector.component.css
+++ b/src/app/report-definer/sub_components/report-type-selector/report-type-selector.component.css
@@ -113,78 +113,20 @@ thead {
   cursor: pointer;
 }
 
-.categories-border {
+.categories-container {
   /*border-bottom: 3px solid #ddd;*/
-  border-left: 3px solid #ddd;
+  /*border-left: 0px solid #ddd;*/
   border-right: 3px solid #ddd;
-  border-top: 0px solid #ddd;
-  margin-left: 0px;
-  margin-right: 0px;
-}
-
-
-.img-div {
-  display: flex;
-  justify-content: center;
-}
-
-a {
-  text-decoration: none;
-}
-
-.category-div {
-  border-bottom: 3px solid #ddd;
-  /*border-left: 3px solid #ddd;
-  border-right: 3px solid #ddd;*/
   border-top: 3px solid #ddd;
   margin-left: 0px;
   margin-right: 0px;
 }
 
-.activeCategory {
-  color: #ffffff;
-  background-color: #5291DF;
+
+a {
+  text-decoration: none;
 }
 
-
-
-.category-name {
-  color: #2a2a2a;
-  font-family:  'Lato', sans-serif;
-  font-weight: 400;
-}
-
-
-@media only screen and (max-width : 480px) {
-
-  .category-icon{
-    height: 50px;
-  }
-
-  .category-icon:first-of-type, .category-icon:last-of-type{
-    height: 36px;
-  }
-
-  /*.category-icon-1{
-    height: 36px;
-  }
-
-  .category-icon-2 {
-    height: 50px;
-  }
-
-  .category-icon-3 {
-      height: 50px;
-  }
-
-  .category-icon-4  {
-    height: 36px;
-  }*/
-
-  .category-name {
-    font-size: 10px;
-  }
-}
 
 /*@media only screen and (max-width : 480px) {
   .category-icon-2 {
